--- a/SHALA-2020/Assignments/DataScience/L4/DS_Assignment_4_Solution.ipynb
+++ b/SHALA-2020/Assignments/DataScience/L4/DS_Assignment_4_Solution.ipynb
@@ -49,11 +49,7 @@
       "metadata": {
         "id": "DHfUkvD3KcNN",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 74
-        },
-        "outputId": "4fe704d7-a343-4f72-e103-864c1fce864a"
+        "colab": {}
       },
       "source": [
         "import numpy as np\n",
@@ -62,17 +58,8 @@
         "from matplotlib import pyplot as plt\n",
         "import seaborn as sns"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
-            "  import pandas.util.testing as tm\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -87,6 +74,95 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4XJMQYuW4A6V",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 206
+        },
+        "outputId": "535720ce-96a0-44aa-8747-080ae0ac9b47"
+      },
+      "source": [
+        "#data.info()\n",
+        "data.head()"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "      <th>1</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0</td>\n",
+              "      <td>0.019404</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1</td>\n",
+              "      <td>0.043634</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2</td>\n",
+              "      <td>0.023797</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>3</td>\n",
+              "      <td>0.444340</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>4</td>\n",
+              "      <td>0.578160</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   0         1\n",
+              "0  0  0.019404\n",
+              "1  1  0.043634\n",
+              "2  2  0.023797\n",
+              "3  3  0.444340\n",
+              "4  4  0.578160"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 45
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -104,15 +180,36 @@
       "metadata": {
         "id": "Hio8uXrtLjl7",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "54388eb9-02be-4f7d-a69a-de38251e8359"
       },
       "source": [
-        "def exp_pdf(x,lambda):\n",
-        "  pdf = lambda * exp(-lambda*x)\n",
-        "  return(pdf)"
+        "def exp_pdf(x,lam):\n",
+        "  pdf = lam * np.exp(-lam*x)\n",
+        "  return(pdf)\n",
+        "\n",
+        "likelihood1 = 1\n",
+        "likelihood2 = 1\n",
+        "for i in data[1]:\n",
+        "  likelihood1 = likelihood1 * exp_pdf(x=i, lam=1)\n",
+        "  likelihood2 = likelihood2 * exp_pdf(x=i, lam=2)\n",
+        "log_likelihood1 = np.log(likelihood1)\n",
+        "log_likelihood2 = np.log(likelihood2)\n",
+        "print(\"The difference of log likelihoods of lambda = 2 and lambda = 1 is {}\".format(log_likelihood2-log_likelihood1))"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "The difference of log likelihoods of lambda = 2 and lambda = 1 is 20.366416970604874\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -139,6 +236,248 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OsCX3HgE86ZT",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 182
+        },
+        "outputId": "b352be35-92fc-4f37-8c3f-002537549aac"
+      },
+      "source": [
+        "sample1.info()"
+      ],
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 100 entries, 0 to 99\n",
+            "Data columns (total 2 columns):\n",
+            " #   Column  Non-Null Count  Dtype  \n",
+            "---  ------  --------------  -----  \n",
+            " 0   0       100 non-null    int64  \n",
+            " 1   1       100 non-null    float64\n",
+            "dtypes: float64(1), int64(1)\n",
+            "memory usage: 1.7 KB\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hABq_NlP9Gce",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 206
+        },
+        "outputId": "559d0290-b5f5-4418-e450-b6c0488356cf"
+      },
+      "source": [
+        "sample1.head()"
+      ],
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "      <th>1</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0</td>\n",
+              "      <td>-0.179278</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1</td>\n",
+              "      <td>0.236714</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2</td>\n",
+              "      <td>0.255502</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>3</td>\n",
+              "      <td>-0.029321</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>4</td>\n",
+              "      <td>0.004818</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   0         1\n",
+              "0  0 -0.179278\n",
+              "1  1  0.236714\n",
+              "2  2  0.255502\n",
+              "3  3 -0.029321\n",
+              "4  4  0.004818"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 49
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IieMGHpd9QU7",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 182
+        },
+        "outputId": "cf76d883-3388-4bbe-82e3-35e05e570f86"
+      },
+      "source": [
+        "sample2.info()"
+      ],
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 50 entries, 0 to 49\n",
+            "Data columns (total 2 columns):\n",
+            " #   Column  Non-Null Count  Dtype  \n",
+            "---  ------  --------------  -----  \n",
+            " 0   0       50 non-null     int64  \n",
+            " 1   1       50 non-null     float64\n",
+            "dtypes: float64(1), int64(1)\n",
+            "memory usage: 928.0 bytes\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ddKliAt69KLo",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 206
+        },
+        "outputId": "8db12905-a887-4954-d8ad-e457562e59c4"
+      },
+      "source": [
+        "sample2.head()"
+      ],
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "      <th>1</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0</td>\n",
+              "      <td>0.680541</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1</td>\n",
+              "      <td>0.436810</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2</td>\n",
+              "      <td>0.604089</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>3</td>\n",
+              "      <td>0.518702</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>4</td>\n",
+              "      <td>0.479711</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   0         1\n",
+              "0  0  0.680541\n",
+              "1  1  0.436810\n",
+              "2  2  0.604089\n",
+              "3  3  0.518702\n",
+              "4  4  0.479711"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 51
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "yIvOH3yWiTU9",
@@ -156,7 +495,12 @@
         "colab": {}
       },
       "source": [
-        ""
+        "mean1 = np.mean(sample1[1])\n",
+        "mean2 = np.mean(sample2[1])\n",
+        "variance1 = np.var(sample1[1],ddof=0)   #ddof=0 provides a maximum likelihood estimate of the variance for normally distributed variables\n",
+        "variance2 = np.var(sample2[1],ddof=0)\n",
+        "n1 = sample1.shape[0]\n",
+        "n2 = sample2.shape[0]"
       ],
       "execution_count": 0,
       "outputs": []
@@ -179,7 +523,7 @@
         "colab": {}
       },
       "source": [
-        ""
+        "dof = n1-1+n2-1"
       ],
       "execution_count": 0,
       "outputs": []
@@ -199,13 +543,33 @@
       "metadata": {
         "id": "ST8J42mAfn0R",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "outputId": "fc3211e3-1b49-4652-caf7-8f4fa74091bf"
       },
       "source": [
-        ""
+        "T =  (mean1-mean2)/np.sqrt((variance1/n1)+(variance2/n2)) #t-statistic\n",
+        "alpha = 0.05  #significance\n",
+        "p = stats.t.pdf((1-alpha)/2,df=dof)  #critical value\n",
+        "print('T : {}, Critical Value : {}'.format(np.abs(T),p))\n",
+        "if np.abs(T) > p:\n",
+        "    print('YES')  #Null hypothesis is rejected\n",
+        "else:\n",
+        "    print('NO')  #Null hypothesis is not rejected"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "T : 16.930142459567165, Critical Value : 0.355540549809666\n",
+            "YES\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -222,7 +586,7 @@
       "metadata": {
         "id": "omfVDZqxfyAM",
         "colab_type": "code",
-        "outputId": "46dece49-758d-4830-9865-976145d664f3",
+        "outputId": "1169ed6f-4e06-4876-8467-9b3ec8d4769c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
@@ -235,7 +599,7 @@
         "plt.legend(['first sample','second sample'])\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "display_data",
@@ -251,19 +615,6 @@
           }
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Z-5ammelgOnA",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
