--- a/SHALA-2020/Assignments/DataScience/L4/DS_Assignment_4_Solution.ipynb
+++ b/SHALA-2020/Assignments/DataScience/L4/DS_Assignment_4_Solution.ipynb
@@ -49,7 +49,11 @@
       "metadata": {
         "id": "DHfUkvD3KcNN",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 71
+        },
+        "outputId": "c1493869-fe8e-4b76-8403-0c90c1f92a36"
       },
       "source": [
         "import numpy as np\n",
@@ -58,8 +62,17 @@
         "from matplotlib import pyplot as plt\n",
         "import seaborn as sns"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
+            "  import pandas.util.testing as tm\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -80,17 +93,17 @@
       "metadata": {
         "id": "4XJMQYuW4A6V",
         "colab_type": "code",
+        "outputId": "9841daeb-13c0-4b3d-de38-2975c9964755",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
-        },
-        "outputId": "535720ce-96a0-44aa-8747-080ae0ac9b47"
+          "height": 203
+        }
       },
       "source": [
         "#data.info()\n",
         "data.head()"
       ],
-      "execution_count": 45,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -160,7 +173,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 45
+          "execution_count": 3
         }
       ]
     },
@@ -180,11 +193,11 @@
       "metadata": {
         "id": "Hio8uXrtLjl7",
         "colab_type": "code",
+        "outputId": "8de61465-0cc2-48bd-eb3b-59de6abb21b5",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "54388eb9-02be-4f7d-a69a-de38251e8359"
+          "height": 54
+        }
       },
       "source": [
         "def exp_pdf(x,lam):\n",
@@ -200,7 +213,7 @@
         "log_likelihood2 = np.log(likelihood2)\n",
         "print(\"The difference of log likelihoods of lambda = 2 and lambda = 1 is {}\".format(log_likelihood2-log_likelihood1))"
       ],
-      "execution_count": 46,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -240,16 +253,16 @@
       "metadata": {
         "id": "OsCX3HgE86ZT",
         "colab_type": "code",
+        "outputId": "454dee08-ccb9-4b3f-c3ec-56439d73dd48",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 182
-        },
-        "outputId": "b352be35-92fc-4f37-8c3f-002537549aac"
+          "height": 171
+        }
       },
       "source": [
         "sample1.info()"
       ],
-      "execution_count": 48,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -273,16 +286,16 @@
       "metadata": {
         "id": "hABq_NlP9Gce",
         "colab_type": "code",
+        "outputId": "b6f6c7cc-439d-46c0-b9a5-30e179fde434",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
-        },
-        "outputId": "559d0290-b5f5-4418-e450-b6c0488356cf"
+          "height": 203
+        }
       },
       "source": [
         "sample1.head()"
       ],
-      "execution_count": 49,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -352,7 +365,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 49
+          "execution_count": 7
         }
       ]
     },
@@ -361,16 +374,16 @@
       "metadata": {
         "id": "IieMGHpd9QU7",
         "colab_type": "code",
+        "outputId": "3ccebddd-20fe-4723-b26c-237bd35e0be6",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 182
-        },
-        "outputId": "cf76d883-3388-4bbe-82e3-35e05e570f86"
+          "height": 171
+        }
       },
       "source": [
         "sample2.info()"
       ],
-      "execution_count": 50,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -394,16 +407,16 @@
       "metadata": {
         "id": "ddKliAt69KLo",
         "colab_type": "code",
+        "outputId": "48d5da7a-fc00-47c5-e445-79d16683f343",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
-        },
-        "outputId": "8db12905-a887-4954-d8ad-e457562e59c4"
+          "height": 203
+        }
       },
       "source": [
         "sample2.head()"
       ],
-      "execution_count": 51,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -473,7 +486,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 51
+          "execution_count": 9
         }
       ]
     },
@@ -497,8 +510,8 @@
       "source": [
         "mean1 = np.mean(sample1[1])\n",
         "mean2 = np.mean(sample2[1])\n",
-        "variance1 = np.var(sample1[1],ddof=0)   #ddof=0 provides a maximum likelihood estimate of the variance for normally distributed variables\n",
-        "variance2 = np.var(sample2[1],ddof=0)\n",
+        "variance1 = np.var(sample1[1],ddof=1)   #ddof=1 means unbiased variance \n",
+        "variance2 = np.var(sample2[1],ddof=1)\n",
         "n1 = sample1.shape[0]\n",
         "n2 = sample2.shape[0]"
       ],
@@ -543,29 +556,57 @@
       "metadata": {
         "id": "ST8J42mAfn0R",
         "colab_type": "code",
+        "outputId": "7b8b850e-0ef6-494e-eb8a-0841cb896321",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
-        },
-        "outputId": "fc3211e3-1b49-4652-caf7-8f4fa74091bf"
+          "height": 71
+        }
       },
       "source": [
         "T =  (mean1-mean2)/np.sqrt((variance1/n1)+(variance2/n2)) #t-statistic\n",
         "alpha = 0.05  #significance\n",
-        "p = stats.t.pdf((1-alpha)/2,df=dof)  #critical value\n",
-        "print('T : {}, Critical Value : {}'.format(np.abs(T),p))\n",
-        "if np.abs(T) > p:\n",
+        "cv = stats.t.pdf((1-alpha)/2,df=dof)  #critical value\n",
+        "print('T : {}, Critical Value : {}'.format(np.abs(T),cv))\n",
+        "if np.abs(T) > cv:\n",
         "    print('YES')  #Null hypothesis is rejected\n",
         "else:\n",
         "    print('NO')  #Null hypothesis is not rejected"
       ],
-      "execution_count": 54,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "T : 16.930142459567165, Critical Value : 0.355540549809666\n",
+            "T : 16.820688596866056, Critical Value : 0.355540549809666\n",
             "YES\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pKcn9MnumuNE",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "9d63f152-e6cc-421c-ee23-a54108eb95b5"
+      },
+      "source": [
+        "t_stat, p_val = stats.ttest_ind(sample1[1], sample2[1], equal_var=False)\n",
+        "print(t_stat)\n",
+        "print(p_val)"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "-16.820688596866056\n",
+            "4.6378628042867264e-36\n"
           ],
           "name": "stdout"
         }
@@ -586,10 +627,10 @@
       "metadata": {
         "id": "omfVDZqxfyAM",
         "colab_type": "code",
-        "outputId": "1169ed6f-4e06-4876-8467-9b3ec8d4769c",
+        "outputId": "2146b538-9c41-42b7-e436-5cc8ec086a82",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 265
+          "height": 232
         }
       },
       "source": [
@@ -599,7 +640,7 @@
         "plt.legend(['first sample','second sample'])\n",
         "plt.show()"
       ],
-      "execution_count": 55,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "display_data",
