--- a/SHALA-2020/Assignments/DataScience/L4/DS_Assignment_4_Solution.ipynb
+++ b/SHALA-2020/Assignments/DataScience/L4/DS_Assignment_4_Solution.ipynb
@@ -536,7 +536,7 @@
         "colab": {}
       },
       "source": [
-        "dof = n1-1+n2-1"
+        "dof = n1+n2-2"
       ],
       "execution_count": 0,
       "outputs": []
@@ -556,7 +556,7 @@
       "metadata": {
         "id": "ST8J42mAfn0R",
         "colab_type": "code",
-        "outputId": "7b8b850e-0ef6-494e-eb8a-0841cb896321",
+        "outputId": "24780827-8f56-4192-93e7-5c89ca02dc43",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 71
@@ -565,19 +565,21 @@
       "source": [
         "T =  (mean1-mean2)/np.sqrt((variance1/n1)+(variance2/n2)) #t-statistic\n",
         "alpha = 0.05  #significance\n",
-        "cv = stats.t.pdf((1-alpha)/2,df=dof)  #critical value\n",
-        "print('T : {}, Critical Value : {}'.format(np.abs(T),cv))\n",
+        "cv = stats.t.ppf(1-alpha,df=dof)  #critical value\n",
+        "p = (1-stats.t.cdf(np.abs(T),dof))*2\n",
+        "print('T : {}, Critical Value : {}, p = {}'.format(np.abs(T),cv,p))\n",
+        "#print('T : {}, Critical Value : {}'.format(np.abs(T),cv,p))\n",
         "if np.abs(T) > cv:\n",
         "    print('YES')  #Null hypothesis is rejected\n",
         "else:\n",
         "    print('NO')  #Null hypothesis is not rejected"
       ],
-      "execution_count": 12,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "T : 16.820688596866056, Critical Value : 0.355540549809666\n",
+            "T : 16.820688596866056, Critical Value : 1.6552145061759864, p = 0.0\n",
             "YES\n"
           ],
           "name": "stdout"
@@ -591,22 +593,21 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
+          "height": 54
         },
-        "outputId": "9d63f152-e6cc-421c-ee23-a54108eb95b5"
+        "outputId": "b7869065-9528-443b-c55c-d1be4411901d"
       },
       "source": [
-        "t_stat, p_val = stats.ttest_ind(sample1[1], sample2[1], equal_var=False)\n",
-        "print(t_stat)\n",
-        "print(p_val)"
+        "#to validate results using in-built function\n",
+        "T, p = stats.ttest_ind(sample1[1], sample2[1], equal_var=False)\n",
+        "print('T : {}, p = {}'.format(np.abs(T),p))"
       ],
-      "execution_count": 13,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "-16.820688596866056\n",
-            "4.6378628042867264e-36\n"
+            "T : 16.820688596866056, p = 4.6378628042867264e-36\n"
           ],
           "name": "stdout"
         }
