--- a/SHALA-2020/Assignments/DataScience/L4/DS_Assignment_4_Solution.ipynb
+++ b/SHALA-2020/Assignments/DataScience/L4/DS_Assignment_4_Solution.ipynb
@@ -587,6 +587,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aM8bBJ0JvT2U",
+        "colab_type": "text"
+      },
+      "source": [
+        " But according to p value, which is almost equal to zero we cannot reject null hypothesis (p<alpha)."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "pKcn9MnumuNE",
@@ -595,14 +605,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 54
         },
-        "outputId": "b7869065-9528-443b-c55c-d1be4411901d"
+        "outputId": "f393f6e8-688e-4160-a3b7-6d9a9aa82e69"
       },
       "source": [
         "#to validate results using in-built function\n",
         "T, p = stats.ttest_ind(sample1[1], sample2[1], equal_var=False)\n",
         "print('T : {}, p = {}'.format(np.abs(T),p))"
       ],
-      "execution_count": 26,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
