--- a/SHALA-2020/Assignments/DataScience/L4/DS_Assignment_4_Solution.ipynb
+++ b/SHALA-2020/Assignments/DataScience/L4/DS_Assignment_4_Solution.ipynb
@@ -589,11 +589,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "aM8bBJ0JvT2U",
+        "id": "PPino2CS1UyH",
         "colab_type": "text"
       },
       "source": [
-        " But according to p value, which is almost equal to zero we cannot reject null hypothesis (p<alpha)."
+        "Even using p value to interpret the result, we got the result as to reject our null hypothesis viz. means of both samples are equal, because p < alpha"
       ]
     },
     {
@@ -605,14 +605,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 54
         },
-        "outputId": "f393f6e8-688e-4160-a3b7-6d9a9aa82e69"
+        "outputId": "d1152352-646d-4172-86b7-add4afd73197"
       },
       "source": [
         "#to validate results using in-built function\n",
         "T, p = stats.ttest_ind(sample1[1], sample2[1], equal_var=False)\n",
         "print('T : {}, p = {}'.format(np.abs(T),p))"
       ],
-      "execution_count": 29,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -638,7 +638,7 @@
       "metadata": {
         "id": "omfVDZqxfyAM",
         "colab_type": "code",
-        "outputId": "2146b538-9c41-42b7-e436-5cc8ec086a82",
+        "outputId": "a4054b6b-8ce6-4503-e76b-5e06b9fa8f60",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 232
@@ -646,12 +646,12 @@
       },
       "source": [
         "sns.distplot(sample1[1].values)\n",
-        "\n",
+        " \n",
         "sns.distplot(sample2[1].values)\n",
         "plt.legend(['first sample','second sample'])\n",
         "plt.show()"
       ],
-      "execution_count": 14,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "display_data",
@@ -666,6 +666,16 @@
             "needs_background": "light"
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "M0771_Ak16Gc",
+        "colab_type": "text"
+      },
+      "source": [
+        " From visualization we conclude that our result is correct."
       ]
     }
   ]
