--- a/SHALA-2020/Assignments/MachineLearning/L5/SVM_linear_kernelized_Assignment_Sol.ipynb
+++ b/SHALA-2020/Assignments/MachineLearning/L5/SVM_linear_kernelized_Assignment_Sol.ipynb
@@ -129,7 +129,7 @@
         "  plt.xlim(0,1)\n",
         "  plt.ylim(0,1)"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -234,7 +234,7 @@
         "w = svm_function(X, Y, 10000, 0.01)\n",
         "print(w)"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -290,10 +290,10 @@
         "  plt.scatter(X[0], X[1], c=clr)\n",
         "plt.plot(x, y1, label='actual line')\n",
         "plt.plot(x, y2, label='decision boundary')   \n",
-        "plt.legend()\n",
+        "plt.legend(loc='best')\n",
         "plt.show() "
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -347,7 +347,7 @@
         "    group.plot(ax=ax, kind='scatter', x='x', y='y', label=key, color=colors[key])\n",
         "pyplot.show()\n"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -424,7 +424,7 @@
         "######################################################\n",
         "w = svm_function(X, Y, 10000, 1)"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
